// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature: ResultsCount React Component Scenario: Rendering When keyword is not provided Then the snapshot should match 1`] = `
<div
  className="cmp-search__resultsCount"
  data-locator="results-count"
>
  <div
    class="query-box"
  >
    <span
      class="results"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Showing <span class='count'>24</span> results",
        }
      }
    />
  </div>
  <hr
    className="small-accent-rule"
  />
</div>
`;

exports[`Feature: ResultsCount React Component Scenario: Rendering When keyword is provided with spelling suggestion Then the snapshot should match 1`] = `
<div
  className="cmp-search__resultsCount"
  data-locator="results-count"
>
  <span
    class="results"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Showing <span class='count'>24</span> results for ",
      }
    }
  />
  <span
    className="text-strike"
  >
    milk
  </span>
  <div
    class="query-box"
  >
    <h1
      className="query"
    >
      got milk?
    </h1>
     
     
     
    <span
      class="category"
    >
      in Shop
    </span>
  </div>
  <hr
    className="small-accent-rule"
  />
</div>
`;

exports[`Feature: ResultsCount React Component Scenario: Rendering When keyword is provided without spelling suggestion Then the snapshot should match 1`] = `
<div
  className="cmp-search__resultsCount"
  data-locator="results-count"
>
  <span
    class="results"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Showing <span class='count'>24</span> results for ",
      }
    }
  />
  
  <div
    class="query-box"
  >
    <h1
      className="query"
    >
      milk
    </h1>
     
     
     
    <span
      class="category"
    >
      in Shop
    </span>
  </div>
  <hr
    className="small-accent-rule"
  />
</div>
`;

exports[`Feature: ResultsCount React Component Scenario: Rendering When more than one related keyword is provided Then the snapshot should match 1`] = `
<div
  className="cmp-search__resultsCount"
  data-locator="results-count"
>
  <span
    class="results"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Showing <span class='count'>24</span> results for ",
      }
    }
  />
  <span
    className="text-strike"
  >
    milk
  </span>
  <div
    class="query-box"
  >
    <h1
      className="query"
    >
      got milk?
    </h1>
     
     
     
    <span
      class="category"
    >
      in Shop
    </span>
  </div>
  <hr
    className="small-accent-rule"
  />
  <div
    className="cmp-search__related-suggestions"
  >
    <span
      class="related-searches-text"
    >
      Related Searches
    </span>
    <a
      aria-label="... it does a body good!"
      className="item"
      href="javascript:void(0);"
      onClick={[Function]}
    >
      <div />
      <span>
        ... it does a body good!
      </span>
    </a>
    <a
      aria-label="milkyway"
      className="item"
      href="javascript:void(0);"
      onClick={[Function]}
    >
      <div />
      <span>
        milkyway
      </span>
    </a>
  </div>
</div>
`;

exports[`Feature: ResultsCount React Component Scenario: Rendering When one related keyword is provided Then the snapshot should match 1`] = `
<div
  className="cmp-search__resultsCount"
  data-locator="results-count"
>
  <span
    class="results"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Showing <span class='count'>24</span> results for ",
      }
    }
  />
  <span
    className="text-strike"
  >
    milk
  </span>
  <div
    class="query-box"
  >
    <h1
      className="query"
    >
      got milk?
    </h1>
     
     
     
    <span
      class="category"
    >
      in Shop
    </span>
  </div>
  <hr
    className="small-accent-rule"
  />
  <div
    className="cmp-search__related-suggestions"
  >
    <span
      class="related-searches-text"
    >
      Related Searches
    </span>
    <a
      aria-label="... it does a body good!"
      className="item"
      href="javascript:void(0);"
      onClick={[Function]}
    >
      <div />
      <span>
        ... it does a body good!
      </span>
    </a>
  </div>
</div>
`;

exports[`Feature: ResultsCount React Component Scenario: Rendering When the number of results is higher than the allowed page count Then the snapshot should match 1`] = `
<div
  className="cmp-search__resultsCount"
  data-locator="results-count"
/>
`;

exports[`Feature: ResultsCount React Component Scenario: Rendering When the number of results is less than the allowed page count Then the snapshot should match 1`] = `
<div
  className="cmp-search__resultsCount"
  data-locator="results-count"
/>
`;
